<resources>
    <string name="app_name">Routes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="route_generator_frag_label">Routes generator</string>
    <string name="save_route_fragment_label">Save route</string>
    <string name="local_settings_fragment_label">Local settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color_name_placeholder_for_card">Color name</string>
    <string name="del">del</string>
    <string name="wall_c">Wall C</string>
    <string name="add_new_color">add new color</string>
    <string name="wall_b">Wall B</string>
    <string name="wall_a">Wall A</string>
    <string name="wall_adjustments">Wall adjustments</string>
    <string name="app_version_label">Version 1.2</string>
    <string name="release_date">Last update: 01.02.2023</string>
    <string name="always_stay_awake">Always stay awake</string>
    <string name="night_mode">Night mode</string>
    <string name="random">random</string>
    <string name="save">Save</string>
    <string name="leve_colors_for_random_sequence">Leve colors for random sequence</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="route_creator">Route creator</string>
    <string name="route_name">Route name</string>
    <string name="creator">Creator:</string>
    <string name="date">Date:</string>
    <string name="used_walls">Used walls:</string>
    <string name="colors">Colors</string>
    <string name="full_screen">full screen</string>
    <string name="you_can_add_and_remove_permanent_colors_on_the_wall">you can add and remove permanent colors on the wall</string>
    <string name="client_id_auth0">ZAkGxvWXueqP5cxCtjINbd9kdgPHduNg</string>
    <string name="domain_auth0">dev-51ze16s1ilwnbz6p.us.auth0.com</string>
    <string name="scheme_auth0">demo</string>
    <string name="user_name">User name</string>
    <string name="useremail_gmail_com">useremail@gmail.com</string>
</resources>