<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".globalSettings.GlobalSettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/settings_main_icon"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/mountain_icon"
                    android:background="@drawable/round_corners_for_settings_field_3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version_label"
                    android:layout_marginTop="10dp"
                    android:textSize="19sp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:layout_gravity="center"/>
            </LinearLayout>


            <LinearLayout
                android:background="@drawable/round_corners_for_settings_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:orientation="vertical"
                android:elevation="5dp">

                <!--always stay awake-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp">

                    <ImageView
                        android:id="@+id/stay_awake_field_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/round_corners_for_settings_field_1"
                        android:padding="12dp"
                        android:src="@drawable/always_stay_awake_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:layout_toEndOf="@+id/stay_awake_field_icon"
                        android:text="@string/always_stay_awake"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/always_stay_awake_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:minWidth="50dp"
                        android:minHeight="50dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp">

                    <ImageView
                        android:id="@+id/night_mode_field_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/round_corners_for_settings_field_2"
                        android:padding="12dp"
                        android:src="@drawable/night_mode_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="17dp"
                        android:layout_toEndOf="@+id/night_mode_field_button"
                        android:text="@string/night_mode"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/night_mode_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:onClick="changeColorMode"
                        android:minWidth="50dp"
                        android:minHeight="50dp" />
                </RelativeLayout>
            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_corners_for_settings_block"
                android:elevation="5dp"
                android:paddingBottom="25dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wall_a"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:maxWidth="250dp"
                    android:text="you can add and remove permanent colors on the wall A"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Button
                    android:id="@+id/add_button_wall_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_theme"
                    android:text="@string/add_new_color"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:layout_editor_absoluteX="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/add_button_wall_a">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_wall_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_corners_for_settings_block"
                android:elevation="5dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/wall_b_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wall_b"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wall_b_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:maxWidth="250dp"
                    android:text="you can ann and remove permanent colors on the wall B"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wall_b_name"/>

                <Button
                    android:id="@+id/add_button_wall_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_theme"
                    android:text="@string/add_new_color"
                    app:layout_constraintTop_toBottomOf="@+id/wall_b_description"
                    tools:layout_editor_absoluteX="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/add_button_wall_b">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_wall_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:clipToPadding="true"
                        android:layout_marginTop="15dp"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_corners_for_settings_block"
                android:elevation="5dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/wall_c_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wall_c"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wall_c_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:maxWidth="250dp"
                    android:text="you can ann and remove permanent colors on the wall С"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wall_c_name"/>

                <Button
                    android:id="@+id/add_button_wall_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_theme"
                    android:text="@string/add_new_color"
                    app:layout_constraintTop_toBottomOf="@+id/wall_c_description"
                    tools:layout_editor_absoluteX="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/add_button_wall_c">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_wall_c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:clipToPadding="true"
                        android:layout_marginTop="15dp"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>